welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:2: error: '(' expected but identifier found.
	if Math.abs(a)-10 < Math.abs(b)-10 return a
           ^close10:5: error: illegal start of simple expression
}
^